v3.7.3 (XXXX-XX-XX)
-------------------

* Don't allow creation of smart satellite graphs or collections (i.e. using
  `"isSmart":true` together with `"replicationFactor":"satellite"` when creating
  graphs or collections. This combination of parameters makes no sense, so that
  the server will now respond with "bad parameter" and an HTTP status code of
  HTTP 400 ("Bad request").

* Fixed internal issue #741: STARTS_WITH fails to accept 'array' as variable.

* Fixed internal issue #738: PHRASE doesn't accept a reference to an array of
  arguments.

* Fixed internal issue #747: fixed possible dangling open files in ArangoSearch
  index after remove operations.

* Add exit code for ICU database loading startup errors.

* Fixed issue #12507: SegFault when using an AQL for loop through edges.

* Make the `IS_IPV4` AQL function behave identical on macOS as on other
  platforms. It previously allowed leading zeros in octets on macOS, whereas on
  other platforms they were disallowed.
  Now this is disallowed on macOS as well.

* Added new metric "arangodb_aql_slow_query" for slow AQL queries, so this can
  be monitored more easily.

* Added new metric "arangodb_scheduler_queue_length" for the scheduler's
  internal queue length.

* Added new metric "arangodb_scheduler_queue_full_failures" for tracking cases
  of a full scheduler queue and dropping requests.

* Added new metrics for the number of V8 contexts dynamically created and
  destroyed ("arangodb_v8_context_created" and "arangodb_v8_context_destroyed")
  and for the number of times a V8 context was entered and left
  ("arangodb_v8_context_entered" and "arangodb_v8_context_exited"). There is
  also a new metric for tracking the cases when a V8 context cannot be
  successfully acquired and an operation is not performed
  ("arangodb_v8_context_enter_failures").

* Added extra info to "queue full" and "giving up waiting for unused v8 context"
  log messages.
